--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Wiki for the Continent of Tivaron
+email: trenidydella@gmail.com 
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Use this page for information on Tivaron. This includes the three countries of Nildor, Quintain, and Aurealius, 
+  as well as character information for many of the people who can be encountered. Additionally, key places are also available.  
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
